Fix Spacing Below Community Documents

--- a/fec/core/static/css/fec.css
+++ b/fec/core/static/css/fec.css
@@ -215,7 +215,7 @@ div.community-description-list dl {
 }
 .header-fixed > tbody {
   overflow-y: auto;
-  height: 150px;
+  max-height: 150px;
 }
 .header-fixed > tbody > tr > td,
 .header-fixed > thead > tr > th {
